test/compile_errors/err_result_expect_message_not_str.w
//! expect-check-fail: argument 1 expects str

fn main:
    let r: Result[i32, str] = Ok(1)
    let _ = r.expect(123)
